# six-birds-time

./: .gitignore  .package-repo-snapshot.json  Makefile  README.md
assets/: zenodo_related_works.csv
docs/experiments/: README.md  exhibit_clock_budget.md  exhibit_constraints_cones.md  exhibit_dpi.md  exhibit_enablement_birth.md  exhibit_no_global_time.md  exhibit_no_signalling_toy.md  index.md  sweep_smoke.md
docs/knowledge_base/: six_birds_theory.tex  (+1 more)
lean/: Main.lean  README.md  TimeWorld.lean  lake-manifest.json  lakefile.lean  lakefile.toml
python/: README.md  pyproject.toml
python/docs/paper/tables/: table_manifest.tex
python/scripts/: _smoke_artifact.py  exhibit_clock_budget_smoke.py  exhibit_constraints_cones_smoke.py  exhibit_dpi_smoke.py  exhibit_enablement_birth_smoke.py  exhibit_no_global_time_smoke.py  exhibit_no_signalling_toy_smoke.py  run_all_exhibits_smoke.py  run_sweep_smoke.py
python/scripts/paper/: make_paper_tables.py
python/src/time_world/: __init__.py  audits_ep.py  audits_path_kl.py  clock_audits.py  constraints_cones.py  enablement.py  holonomy.py  model.py  no_signalling_toy.py  sweeps.py
python/src/time_world/utils/: __init__.py  artifacts.py
python/tests/: test_audits_ep.py  test_audits_path_kl.py  test_clock_audits.py  test_clock_progress_metrics.py  test_constraints_cones.py  test_enablement.py  test_holonomy.py  test_model.py  test_no_signalling_toy.py  test_run_all_script_exists.py  test_sweeps.py  test_utils.py
scripts/: build_time_paper.py  make_hal_source_zip.sh  package_arxiv.sh  package_repo_snapshot.sh
(+53 files in other folders)
