[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "time-world"
version = "0.0.0"
description = "Time world experiments"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "pytest",
]

[project.optional-dependencies]
dev = [
  "ruff",
  "mypy",
  "matplotlib",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
